@@ -1,1 +1,0 @@
-#define NET_ATM 0
